@@ -5,37 +5,37 @@
     
     
       
-      <testcase classname="fastlane.lanes" name="0: default_platform" time="0.000234">
+      <testcase classname="fastlane.lanes" name="0: default_platform" time="0.000241">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="1: puro flutter clean" time="7.577901">
+      <testcase classname="fastlane.lanes" name="1: puro flutter clean" time="7.786639">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="2: puro flutter pub get" time="4.14">
+      <testcase classname="fastlane.lanes" name="2: puro flutter pub get" time="4.242154">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="3: puro flutter build apk --target-platform=android-arm64" time="51.805721">
+      <testcase classname="fastlane.lanes" name="3: puro flutter build apk --target-platform=android-arm64" time="56.200006">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="4: mv ../../build/app/outputs/flutter-apk/app-release.apk ../../build/app/outputs/flutter-apk/trosko.apk" time="0.020617">
+      <testcase classname="fastlane.lanes" name="4: mv ../../build/app/outputs/flutter-apk/app-release.apk ../../build/app/outputs/flutter-apk/trosko.apk" time="0.005434">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="5: set_github_release" time="11.400555">
+      <testcase classname="fastlane.lanes" name="5: set_github_release" time="10.712133">
         
       </testcase>
     
       
-      <testcase classname="fastlane.lanes" name="6: notification" time="0.420762">
+      <testcase classname="fastlane.lanes" name="6: notification" time="0.40662">
         
       </testcase>
     
